[package]
name = "time-ledger-rs"
version = "0.1.0"
edition = "2024"
description = "Terminal UI for tracking weekly task time in plain-text ledger files."
license = "MIT"
repository = "https://github.com/Riadabd/time-ledger"
readme = "README.md"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
edit_core = "0.2.0"
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
